--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "postcss": "8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.4.1",
