--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/node": "20.5.7",
     "@types/react": "18.2.73",
     "@types/react-dom": "18.2.22",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "10.4.18",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -55,6 +56,7 @@
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.4.2",
+    "uuid": "^9.0.1",
     "zod": "3.22.4",
     "zustand": "^4.5.2"
   },
