--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.4.2",
     "uuid": "^9.0.1",
+    "vaul": "^0.9.0",
     "zod": "3.22.4",
     "zustand": "^4.5.2"
   },
