--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.4.2",
+    "usehooks-ts": "^3.1.0",
     "uuid": "^9.0.1",
     "vaul": "^0.9.0",
     "zod": "3.22.4",
