--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "14.1.4",
     "focus-trap-react": "^10.2.3",
+    "linkify-react": "^4.1.3",
     "lucide-react": "^0.358.0",
     "next": "14.1.4",
     "next-themes": "^0.3.0",
