--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "@stream-io/video-react-sdk": "^1.0.8",
     "@tanstack/react-query": "^5.35.1",
     "@tanstack/react-table": "^8.10.3",
     "@types/node": "20.5.7",
