Update streamio library version; Added stream-chat library

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.0.6",
-    "@stream-io/video-react-sdk": "^1.0.8",
+    "@stream-io/video-react-sdk": "^1.2.13",
     "@tanstack/react-query": "^5.35.1",
     "@tanstack/react-table": "^8.10.3",
     "@types/node": "20.5.7",
@@ -59,6 +59,7 @@
     "react-hook-form": "^7.51.0",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
+    "stream-chat": "^8.37.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
