--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "lucide-react": "^0.358.0",
     "next": "14.1.4",
     "next-themes": "^0.3.0",
+    "openai": "^4.0.0",
     "postcss": "8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
