--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "focus-trap-react": "^10.2.3",
     "linkify-react": "^4.1.3",
     "lucide-react": "^0.358.0",
+    "markdown-to-jsx": "^7.4.7",
     "next": "14.1.4",
     "next-themes": "^0.3.0",
     "openai": "^4.0.0",
